--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,12 +4,47 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/java
 
 trigger:
-- master
+  batch: true
+  branches:
+    include:
+    - dev
+  paths:
+    exclude:
+    - azure-pipelines.yml
+    - azure-pipelines-TagnRelease.yml
+    - azure-pipelines-deploy.yml
+    - azure-pipelines-deploy-prod.yml
+    - pom.xml
 
 pool:
   vmImage: ubuntu-latest
+variables:
+- group: Azure-Variable-Group
+- name: MAVEN_CACHE_FOLDER
+  value: $(Pipeline.Workspace)/.m2/repository
+- name: MAVEN_OPTS
+  value: '-Dmaven.repo.local=$(MAVEN_CACHE_FOLDER)'
+
 
 steps:
+- task: CacheBeta@0
+  inputs:
+    key: $(Build.SourcesDirectory)/pom.xml
+    path: $(MAVEN_CACHE_FOLDER)
+  displayName: Cache Maven local repo
+
+- task: DownloadSecureFile@1
+  name: settingsxml
+  inputs:
+    secureFile: 'settings.xml'
+
+- task: PowerShell@2
+  inputs:
+    targetType: 'inline'
+    script: |
+      New-Item -Type Directory -Force "${HOME}/.m2"
+      Copy-Item -Force "$(settingsxml.secureFilePath)" "${HOME}/.m2/settings.xml"
+    
 - task: Maven@3
   inputs:
     mavenPomFile: 'pom.xml'
@@ -19,4 +54,4 @@ steps:
     jdkArchitectureOption: 'x64'
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
-    goals: 'package'
+    goals: 'clean deploy -DmuleDeploy'
